# xadrez

./: .gitignore  README.md
Firmware/: CMakeLists.txt  examples.h  main.c
Firmware/Parser/: Parser.c  Parser.h
Firmware/Pilha/: Pilha.c  Pilha.h
Graphic/: CMakeLists.txt  main.cpp
Graphic/Libraries/: Camera.h  General.h  Shader.h  stb_image.h  texture.h
Graphic/Shaders/: BaseShader.frag  BaseShader.vert
Graphic/Sources/: Camera.cpp  Shader.cpp  stb_image.cpp  texture.cpp
Graphic/glad/include/glad/: glad.h
Graphic/glad/src/: glad.c
